Fix line height of gm-visibility message senders (#12759)

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -309,11 +309,12 @@ i[data-pf2-repost] {
     border-radius: 1px;
     box-sizing: border-box;
     display: inline-block;
-    line-height: 1;
+    line-height: 1em;
     outline: 1px dotted rgba(75, 74, 68, 0.5);
     padding: var(--space-size-1);
 
     &.message-sender {
+        line-height: normal;
         max-width: fit-content;
     }
 
